--- a/cluster/apps/media/mylar3.yaml
+++ b/cluster/apps/media/mylar3.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: init-mylar3-cm
-  namespace: downloads
+  namespace: media
 data:
   99-mylar3-init.sh: |
     #!/usr/bin/with-contenv bash
@@ -57,7 +57,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mylar3
-  namespace: downloads
+  namespace: media
   labels:
     app: mylar3
 spec:
@@ -119,7 +119,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mylar3
-  namespace: downloads
+  namespace: media
   labels:
     app: mylar3
 spec:
@@ -134,7 +134,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: mylar3-ingress
-  namespace: downloads
+  namespace: media
 spec:
   entryPoints:
   - web
