--- a/cluster/apps/config-volume.yaml
+++ b/cluster/apps/config-volume.yaml
@@ -29,10 +29,10 @@ spec:
       numberOfReplicas: "2"
   accessModes:
     - ReadWriteMany
-  claimRef:
-    kind: PersistentVolumeClaim
-    name: config-file-pvc
-    namespace: media
+  #claimRef:
+  #  kind: PersistentVolumeClaim
+  #  name: config-file-pvc
+  #  namespace: media
   persistentVolumeReclaimPolicy: Retain
   storageClassName: longhorn-customised
   volumeMode: Filesystem
