--- a/cluster/apps/media/radarr.yaml
+++ b/cluster/apps/media/radarr.yaml
@@ -1,26 +1,44 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: init-radarr-cm
+  name: init-radarr-files
   namespace: media
 data:
-  99-radarr-init.sh: |
-    #!/usr/bin/with-contenv bash
+  config.xml: |
+    <Config>
+      <LogLevel>info</LogLevel>
+      <UrlBase>/radarr</UrlBase>
+      <UpdateMechanism>BuiltIn</UpdateMechanism>
+      <BindAddress>*</BindAddress>
+      <Port>7878</Port>
+      <SslPort>9898</SslPort>
+      <EnableSsl>False</EnableSsl>
+      <LaunchBrowser>True</LaunchBrowser>
+      <ApiKey></ApiKey>
+      <AuthenticationMethod>None</AuthenticationMethod>
+      <Branch>master</Branch>
+      <SslCertPath></SslCertPath>
+      <SslCertPassword></SslCertPassword>
+      <AnalyticsEnabled>False</AnalyticsEnabled>
+    </Config>
+  entrypoint.sh: |
+    #!/usr/bin/env bash
 
-    FILE=${CONFIG_FILE}
-    URL=/radarr
+    #shellcheck disable=SC1091
+    source "/shim/umask.sh"
+    source "/shim/vpn.sh"
 
-    if [ ! -f "$FILE" ]; then
-      echo "no config file exists - you must be doing a fresh install"
-      echo "a config file will be created for you by the container. Restart container to update values"
+    if [[ ! -f "/config/config.xml" ]]; then
+      printf "Copying over default configuration ... "
+      mkdir -p /config
+      cp /app/config.xml /config/config.xml
+
+      printf "Creating api keys ... "
+      api_key=$(cat /dev/urandom | tr -dc 'a-z0-9' | fold -w 32 | head -n 1)
+      sed -i -e "s/<ApiKey><\/ApiKey>$/<ApiKey>${api_key}<\/ApiKey>/g" /config/config.xml
     fi
 
-    if [ -f "$FILE" ]; then
-      sed -i '/<UrlBase><\/UrlBase>/,${s||<UrlBase>'"$URL"'<\/UrlBase>|;b};$q1' $FILE
-      if [ $? -eq 0 ]; then
-        echo "updated baseurl to $URL"
-      fi
-    fi
+    exec /app/Radarr --nobrowser --data=/config ${EXTRA_ARGS}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -30,7 +48,7 @@ metadata:
   labels:
     app: radarr
 spec:
-  replicas: 1 # tells deployment to run x pods matching the template
+  replicas: 1
   selector:
     matchLabels:
       app: radarr
@@ -39,48 +57,49 @@ spec:
       labels:
         app: radarr
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 568
+        runAsGroup: 568
+        fsGroup: 568
+        fsGroupChangePolicy: "OnRootMismatch"
       volumes:
       - name: config-volume
         persistentVolumeClaim:
           claimName: config-file-pvc
-      - name: scripts # name of volume
+      - name: radarr-config-xml
         configMap:
-          name: init-radarr-cm # name of the ConfigMap you want to mount.
-          items: # files to create
-          - key: 99-radarr-init.sh
-            path: 99-radarr-init.sh
+          name: init-radarr-files
+          items:
+          - key: config.xml
+            path: config.xml
+          defaultMode: 0644
+      - name: radarr-entrypoint-sh
+        configMap:
+          name: init-radarr-files
+          items:
+          - key: entrypoint.sh
+            path: entrypoint.sh
+          defaultMode: 0755
       containers:
       - name: radarr
-        image: hotio/radarr
-        lifecycle:
-          postStart:
-            exec:
-              command: ["/bin/sh", "-c", 'cp /scripts/* /etc/cont-init.d/']
-        env:
-        - name: CONFIG_FILE
-          value: /config/config.xml
+        image: ghcr.io/k8s-at-home/radarr
+        command: ["/bin/sh"]
+        args: ["-c", "/app/entrypoint.sh"]
         ports:
         - containerPort: 7878
         volumeMounts:
         - name: config-volume
           mountPath: "/config"
           subPath: "configs/radarr"
-        - name: scripts
-          mountPath: /scripts
-        startupProbe:
-          exec:
-            command:
-              - /bin/sh
-              - -c
-              - grep "<UrlBase>/radarr</UrlBase>" /config/config.xml
-          failureThreshold: 10
-          periodSeconds: 10
-        livenessProbe:
-          httpGet:
-            path: /radarr
-            port: 7878
-          initialDelaySeconds: 60
-          periodSeconds: 60
+        - name: radarr-config-xml
+          mountPath: /app/config.xml
+          subPath: config.xml
+        - name: radarr-entrypoint-sh
+          mountPath: /app/entrypoint.sh
+          subPath: entrypoint.sh
+        securityContext:
+          allowPrivilegeEscalation: false
 ---
 apiVersion: v1
 kind: Service
