--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- bazarr.yaml
 - mylar3.yaml
 - radarr.yaml
+- sabnzbd.yaml
 - sonarr.yaml
