feat: mosquitto run as non-root

--- a/cluster/apps/home-automation/mosquitto.yaml
+++ b/cluster/apps/home-automation/mosquitto.yaml
@@ -30,6 +30,12 @@ spec:
       labels:
         app: mosquitto
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
       volumes:
       - name: mosquitto-config
         configMap:
@@ -43,6 +49,8 @@ spec:
         - name: mosquitto-config
           mountPath: /mosquitto/config/mosquitto.conf
           subPath: mosquitto.conf
+        securityContext:
+          allowPrivilegeEscalation: false
 ---
 apiVersion: v1
 kind: Service
