--- a/cluster/apps/home-automation/home-assistant.yaml
+++ b/cluster/apps/home-automation/home-assistant.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: homeassistant
 spec:
-  replicas: 1 # tells deployment to run x pods matching the template
+  replicas: 1
   selector:
     matchLabels:
       app: homeassistant
