--- a/cluster/apps/home-automation/kustomization.yaml
+++ b/cluster/apps/home-automation/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- automation-volume.yaml
+- ha-namespace
+- ha-volume.yaml
 - home-assistant.yaml
 - mosquitto.yaml
 - zigbee2mqtt.yaml
