--- a/cluster/apps/home-automation/zigbee2mqtt.yaml
+++ b/cluster/apps/home-automation/zigbee2mqtt.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: zigbee2mqtt
 spec:
-  replicas: 1 # tells deployment to run x pods matching the template
+  replicas: 1
   selector:
     matchLabels:
       app: zigbee2mqtt
