initial linting run
Initial run of ansible-lint and required fixes

--- a/bare-metal/Makefile
+++ b/bare-metal/Makefile
@@ -1,8 +1,16 @@
-ansible-setup:
-	./ansible-setup.sh
+venv:
+	rm -rf .venv
+	python3 -m venv .venv
+	. .venv/bin/activate; pip3 install wheel #wheel required BEFORE installing requirements
+	. .venv/bin/activate; pip install -r requirements-frozen.txt
 
-ansible-k3s:
-	ansible-playbook -i ./inventory/inventory.yml k3scluster.yml --ask-pass --ask-become-pass
+	. .venv/bin/activate; ansible-galaxy install -r requirements.yml
+
+ansible-k3s-prod:
+	ansible-playbook -i ./inventory/inventory-prod.yml k3scluster.yml --ask-pass --ask-become-pass
+
+ansible-k3s-dev:
+	ansible-playbook -i ./inventory/inventory-develop.yml k3scluster.yml --ask-pass --ask-become-pass
 
 ansible-flux:
 	ansible-playbook localhost.yml --ask-pass --ask-become-pass
