--- a/bare-metal/roles/k3s/tasks/k3s.yml
+++ b/bare-metal/roles/k3s/tasks/k3s.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Kubernetes
-  include_role:
+  ansible.builtin.include_role:
     name: xanmanning.k3s
 
 - name: cluster | kubeconfig | copy config file to localhost
