--- a/kubernetes/clusters/develop/apps.yaml
+++ b/kubernetes/clusters/develop/apps.yaml
@@ -10,7 +10,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/production
+  path: ./kubernetes/apps/develop
   prune: true
   wait: true
   timeout: 5m0s
