--- a/kubernetes/apps/production/media/radarr.yaml
+++ b/kubernetes/apps/production/media/radarr.yaml
@@ -1,3 +1,52 @@
+apiVersion: longhorn.io/v1beta1
+kind: Volume
+metadata:
+  labels:
+    longhornvolume: radarr-config-volume
+  name: radarr-config-volume
+  namespace: longhorn-system
+spec:
+  accessMode: rwx
+  storageClassName: longhorn-customised
+  engineImage: longhornio/longhorn-engine:v1.2.4
+  frontend: blockdev
+  numberOfReplicas: 2
+  size: "1073741824"
+---
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: radarr-config-pv
+spec:
+  capacity:
+    storage: 1Gi
+  csi:
+    driver: driver.longhorn.io
+    volumeHandle: radarr-config-volume
+    fsType: ext4
+    volumeAttributes:
+      numberOfReplicas: "2"
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: longhorn-customised
+  volumeMode: Filesystem
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: radarr-config-pvc
+  namespace: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
+  volumeName: radarr-config-pv
+  storageClassName: longhorn-customised
+  volumeMode: Filesystem
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -50,7 +99,7 @@ spec:
       volumes:
       - name: config-volume
         persistentVolumeClaim:
-          claimName: config-file-pvc
+          claimName: radarr-config-pvc
       - name: radarr-config-xml
         configMap:
           name: init-radarr-files
@@ -74,8 +123,8 @@ spec:
         - containerPort: 7878
         volumeMounts:
         - name: config-volume
-          mountPath: "/config"
-          subPath: "configs/radarr"
+          mountPath: /config
+          subPath: radarr
         - name: radarr-config-xml
           mountPath: /app/config.xml
           subPath: config.xml
