Revert "refact: convert remaining apps to use individual volumes"
This reverts commit c16f4aea99a81902d6539958b6f1515e5d4b4405.

--- a/kubernetes/apps/production/media/bazarr.yaml
+++ b/kubernetes/apps/production/media/bazarr.yaml
@@ -3,6 +3,7 @@ kind: Volume
 metadata:
   labels:
     longhornvolume: bazarr-config-volume
+    #recurring-job-group.longhorn.io/backup: enabled
   name: bazarr-config-volume
   namespace: longhorn-system
 spec:
@@ -126,8 +127,8 @@ spec:
         - containerPort: 6767
         volumeMounts:
         - name: config-volume
-          mountPath: /config
-          subPath: bazarr
+          mountPath: "/config"
+          subPath: "bazarr"
         - name: bazarr-config-ini
           mountPath: /app/config.ini
           subPath: config.ini
