--- a/kubernetes/apps/production/home-automation/zigbee2mqtt.yaml
+++ b/kubernetes/apps/production/home-automation/zigbee2mqtt.yaml
@@ -1,52 +1,3 @@
-apiVersion: longhorn.io/v1beta1
-kind: Volume
-metadata:
-  labels:
-    longhornvolume: zigbee2mqtt-config-volume
-  name: zigbee2mqtt-config-volume
-  namespace: longhorn-system
-spec:
-  accessMode: rwx
-  storageClassName: longhorn-customised
-  engineImage: longhornio/longhorn-engine:v1.2.4
-  frontend: blockdev
-  numberOfReplicas: 2
-  size: "104857600"
----
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: zigbee2mqtt-config-pv
-spec:
-  capacity:
-    storage: 100Mi
-  csi:
-    driver: driver.longhorn.io
-    volumeHandle: zigbee2mqtt-config-volume
-    fsType: ext4
-    volumeAttributes:
-      numberOfReplicas: "2"
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: longhorn-customised
-  volumeMode: Filesystem
----
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  name: zigbee2mqtt-config-pvc
-  namespace: media
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 100Mi
-  volumeName: zigbee2mqtt-config-pv
-  storageClassName: longhorn-customised
-  volumeMode: Filesystem
----
 # https://github.com/Koenkk/zigbee2mqtt/discussions/10899
 apiVersion: apps/v1
 kind: Deployment
@@ -68,7 +19,7 @@ spec:
       volumes:
       - name: automation-volume
         persistentVolumeClaim:
-          claimName: zigbee2mqtt-config-pvc
+          claimName: automation-volume-pvc
       - name: zigbee2mqtt-udev
         hostPath:
           path: /run/udev
@@ -106,7 +57,7 @@ spec:
         volumeMounts:
         - name: automation-volume
           mountPath: /app/data
-          subPath: zigbee2mqtt
+          subPath: configs/zigbee2mqtt
         - name: zigbee2mqtt-udev
           mountPath: /run/udev
         - name: ttyusb
