--- a/kubernetes/apps/production/media/media-volume.yaml
+++ b/kubernetes/apps/production/media/media-volume.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   accessMode: rwx
   storageClassName: longhorn-customised
+  dataLocality: best-effort
   engineImage: longhornio/longhorn-engine:v1.2.4
   frontend: blockdev
   numberOfReplicas: 2
