fix: migration issues
Having issues migrating data to HASS instance. Seeing if making it same version as origin resolves the issue

--- a/kubernetes/apps/production/home-automation/home-assistant.yaml
+++ b/kubernetes/apps/production/home-automation/home-assistant.yaml
@@ -21,7 +21,7 @@ spec:
           claimName: automation-volume-pvc
       containers:
       - name: homeassistant
-        image: homeassistant/home-assistant
+        image: homeassistant/home-assistant:2021.11.4
         ports:
         - containerPort: 8123
         env:
