switch to nginx ingress

--- a/bare-metal/Makefile
+++ b/bare-metal/Makefile
@@ -7,7 +7,7 @@ venv:
 	. .venv/bin/activate; ansible-galaxy install -r requirements.yml
 
 ansible-k3s-dev:
-	ansible-playbook -i ./inventory/inventory-develop.yml k3scluster.yml --ask-pass --ask-become-pass -vvvv
+	ansible-playbook -i ./inventory/inventory-develop.yml k3scluster.yml --ask-pass --ask-become-pass
 
 ansible-k3s-prod:
 	ansible-playbook -i ./inventory/inventory-prod.yml k3scluster.yml --ask-pass --ask-become-pass
