--- a/kubernetes/infrastructure/ingress/internal.yaml
+++ b/kubernetes/infrastructure/ingress/internal.yaml
@@ -601,7 +601,7 @@ metadata:
     app.kubernetes.io/name: ingress-nginx-internal
     app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
-  name: nginx
+  name: nginx-internal
 spec:
   controller: k8s.io/ingress-nginx-internal
 ---
