--- a/kubernetes/clusters/develop/infrastructure.yaml
+++ b/kubernetes/clusters/develop/infrastructure.yaml
@@ -13,3 +13,8 @@ spec:
   path: ./kubernetes/infrastructure
   prune: true
   validation: client
+  postBuild:
+    substitute: {}
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
