--- a/kubernetes/clusters/develop/settings.yaml
+++ b/kubernetes/clusters/develop/settings.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: settings
+  name: cluster-settings
   namespace: flux-system
 spec:
   interval: 5m0s
